[package]
name = "cli"
version = "0.1.0"
authors = ["Markus Mayer"]
edition = "2021"
repository = "https://github.com/sunsided/graph-based-image-segmentation"
license = "MIT"
categories = ["command-line-utilities"]
publish = false

[dependencies]
opencv = { version = "0.82.0", default-features = false, features = ["imgproc"] }
graph-based-image-segmentation = { path = "../lib", version = "*" }
