[package]
name = "cli"
version = "0.2.1"
authors = ["Markus Mayer"]
edition = "2021"
repository = "https://github.com/sunsided/graph-based-image-segmentation"
license = "MIT"
categories = ["command-line-utilities"]
publish = false

[dependencies]
opencv = { version = "0.84.5", default-features = false, features = ["imgproc"] }
graph-based-image-segmentation = { path = "../lib", version = "*" }
