[package]
name = "graph-based-image-segmentation"
description = "An implementation of graph-based image segmentation algorithms based on superpixels."
version = "0.2.0"
authors = ["Markus Mayer"]
edition = "2021"
repository = "https://github.com/sunsided/graph-based-image-segmentation"
license = "MIT"
readme = "../README.md"
keywords = ["graphics", "image-processing"]
categories = ["computer-vision", "multimedia::images"]

[dependencies]
opencv = { version = "0.82.0", default-features = false, features = ["imgcodecs"] }

[dev-dependencies]
criterion = "0.5.0"
opencv = { version = "0.82.0", default-features = false, features = ["imgproc"] }

[[bench]]
name = "performance"
harness = false
